# arba-cppx

./: .clang-format  CMakeLists.txt  README.md  conanfile.py
cmake/config/: package-config.cmake.in
cmake/script/: quick_install.cmake
example/: example.cpp
include/arba/cppx/: compilation_error.hpp  cppx.hpp  version.hpp.in
include/arba/cppx/macro/: format_var.hpp  identity_type.hpp  stringize.hpp
include/arba/cppx/policy/: build_type.hpp  endianness_policy.hpp  exception_policy.hpp  execution_policy.hpp  thread_policy.hpp
include/arba/cppx/preprocessor/: auto_var_name.hpp  concat.hpp  exception.hpp  format_var.hpp  identity_type.hpp  stringize.hpp
include/arba/cppx/string/: fixed_string.hpp  string_constant.hpp  string_conversion.hpp
include/arba/cppx/type_traits/: demangled_type_name.hpp  type_name.hpp
include/arba/cppx/version/: is_compatible_with.hpp  numver.hpp  numver_constant.hpp  semver.hpp  vtag.hpp
include/arba/cppx/version/_private/: extract_numver.hpp  extract_semver.hpp
include/arba/cppx/version/concepts/: numver.hpp  semver.hpp
test/: CMakeLists.txt  project_version_tests.cpp
test/macro/: CMakeLists.txt  auto_var_name_tests.cpp  concat_tests.cpp  exception_no_exceptions_tests.cpp  exception_tests.cpp  format_var_tests.cpp  identity_type_tests.cpp  stringize_tests.cpp
test/policy/: CMakeLists.txt  build_type_tests.cpp  custom_build_type_tests.cpp  endianness_policy_tests.cpp  exception_policy_tests.cpp  execution_policy_tests.cpp  thread_policy_tests.cpp
test/preprocessor/: CMakeLists.txt  exception_no_exceptions_tests.cpp  exception_tests.cpp  format_var_tests.cpp
test/string/: CMakeLists.txt  fixed_string_tests.cpp  string_constant_tests.cpp
test/type_traits/: CMakeLists.txt  demangled_type_name_tests.cpp  type_name_tests.cpp
test/version/: CMakeLists.txt  extract_numver_tests.cpp  extract_semver_tests.cpp  numver_constant_tests.cpp  numver_tests.cpp  semver_tests.cpp  vtag_tests.cpp
test_package/: CMakeLists.txt  test_package.cpp
